--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="user_not_auth">Sessão expirada ou usuário não autenticado</string>
     <string name="ok">OK</string>
     <string name="autenticando">Autenticando...</string>
+    <string name="sessao_encerrada">Sessão encerrada</string>
 </resources>
